@@ -1,11 +1,8 @@
 use Cache::Bounded;
-use Test;
+use Test::Simple tests => 2500;
 use strict;
 
-BEGIN { plan tests => 2500 }; 
-
 my $cache = new Cache::Bounded;
-
 $cache->set('foo','foo');
 
 for ( 1 .. 2500 ) {
